web/html/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fonseca-de-com
spec:
  selector:
    app: fonseca-de-com
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
